@@ -1,7 +1,7 @@
 Package: SimJoint
 Type: Package
 Title: Simulate Joint Distribution
-Version: 0.3.4
+Version: 0.3.5
 Author: Charlie Wusuo Liu
 Maintainer: Charlie Wusuo Liu <liuwusuo@gmail.com>
 Description: Simulate multivariate correlated data given nonparametric marginals and their covariance structure characterized by a Pearson or Spearman correlation matrix. The simulator engages the problem from a purely computational perspective. It assumes no statistical models such as copulas or parametric distributions, and can approximate the target correlations regardless of theoretical feasibility. The algorithm integrates and advances the Iman-Conover (1982) approach <doi:10.1080/03610918208812265> and the Ruscio-Kaczetow iteration (2008) <doi:10.1080/00273170802285693>. Package functions are carefully implemented in C++ for squeezing computing speed, suitable for large input in a manycore environment. Precision of the approximation and computing speed both outperform various CRAN packages to date by substantial margins. Benchmarks are detailed in function examples. A simple heuristic algorithm is additionally designed to optimize the joint distribution in the post-simulation stage. This heuristic demonstrated not only strong capability of cost reduction, but also good potential of achieving the same level of precision of approximation without the enhanced Iman-Conover-Ruscio-Kaczetow. The package contains a copy of Permuted Congruential Generator from <http://www.pcg-random.org>.
@@ -14,6 +14,6 @@ SystemRequirements: GNU make
 Suggests: R.rsp
 VignetteBuilder: R.rsp
 NeedsCompilation: yes
-Packaged: 2020-01-10 01:59:17 UTC; i56087
+Packaged: 2020-01-12 20:27:27 UTC; i56087
 Repository: CRAN
-Date/Publication: 2020-01-10 16:10:02 UTC
+Date/Publication: 2020-01-13 19:40:02 UTC
