@@ -1,8 +1,8 @@
-e367bdf6fecaf8de23529d66be4f1bc2 *DESCRIPTION
+eeb32b0ee901296f886d2c10c99d9d12 *DESCRIPTION
 65ff329fbf2a0a42c9ee00057d0fd652 *NAMESPACE
 a17c73e7ba337adc175939d23778696f *R/RcppExports.R
 80b7c7a1bfabd857b6b199132a75054f *build/vignette.rds
-c594a346abce240698441945e850710a *inst/NEWS.Rd
+981625ccdb6d93e160460889de4fd677 *inst/NEWS.Rd
 b9d9b8bd3dfbc0f9a563b64207e51377 *inst/doc/SimulatedJointDistribution.pdf
 8b3e50b4cb4b74b5ecc2ea4990c0e324 *inst/doc/SimulatedJointDistribution.pdf.asis
 f5e993ca6e759ee1ebe7cfd2f6b98bce *man/LHSpmf.Rd
@@ -18,16 +18,16 @@ d3b2a628891680a1ab7759f9391ecedf *man/xSJpearsonPMF.Rd
 87b014f758716174166613f53e8acfdb *src/Makevars
 a118337630ab0269ae152a351d2f1765 *src/Makevars.win
 062a0a56137e3d1bb7b0d7c760877a39 *src/RcppExports.cpp
-cb2f2ef72d13d6c282a7a4620cd8bfac *src/decor.cpp
-232b89c9353cfbfc9c0c9f4174e5b476 *src/hpp/LHSsorted.hpp
-1d7ebf1c174f3de3c00c3a434b5b9e38 *src/hpp/dnyTasking.hpp
-eb16a8d6b84f741f85ff176b1134f8b3 *src/jointSimulation.cpp
-9ae446d47a4ed8afd20e479da3c37480 *src/lhsPMF.cpp
-9f6228711001b3de2b0cc2a4c95c3cd5 *src/pcg/parallelSeeds.hpp
-73f8716cc6ec6e4d5ebf04f6804c2e0b *src/pcg/pcg_extras.hpp
-db7d2a27d3911f511ba711dad44b99d7 *src/pcg/pcg_random.hpp
-79697f6b92d49a1c928b10180edb8a05 *src/pcg/pcg_uint128.hpp
-912cc326fa048ccd8f2ee6e55cb1dcc9 *src/pcg/toSeed.hpp
+ec164d1e820d5f20d3f6e78c78ac71a3 *src/decor.cpp
+0609eaa01614bc9e9c4e99ab9237a146 *src/hpp/LHSsorted.hpp
+5f995fc1236090a31a730183115d95cf *src/hpp/dnyTasking.hpp
+2309e75dbf264873074e220c5bb3c82d *src/jointSimulation.cpp
+c207849f931783f2e3b0ac025916bab2 *src/lhsPMF.cpp
+4afdc1e7b31831163e2999352a728789 *src/pcg/parallelSeeds.hpp
+c9f36852d222c3f4c7c85f7865234fa3 *src/pcg/pcg_extras.hpp
+a77bbfac36b66fc6756514b379a5e677 *src/pcg/pcg_random.hpp
+3cb14b26feb583e9304ee0ea7d4d7b4a *src/pcg/pcg_uint128.hpp
+dd15dd099d0b100f2d4ea7accad56d3e *src/pcg/toSeed.hpp
 7d75a128ee89e723fa6100bcf5cbd53f *tests/funtionExamples/LHSpmf_eg.r
 c84565bf536d3055a74d1a63c9639d39 *tests/funtionExamples/RuscioKaczetow.r
 5e87806316431c5b304074e4b58c9305 *tests/funtionExamples/SJpearsonPMF_eg.r
